@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3558 utf-8
+personal_ws-1.1 en 3561 utf-8
 AAC
 AAS
 ABI
@@ -2133,9 +2133,11 @@ getDevicesVariableValues
 getTrackingResult
 getValue
 getVariable
+getaddrinfo
 getconf
 getent
 getenv
+gethostbyname
 getopt
 getproctag
 gettext
