@@ -50,6 +50,10 @@ https://github.com/networkupstools/nut/milestone/12
      framework introduced a `upsdrv_tweak_prognames()` hook method to let
      them manipulate the array of `prognames[]` aliases. [PR #3101]
 
+ - `apcupsd-ups` driver updates:
+   * Abandoned use of obsolete `gethostbyname()` in favour of `getaddrinfo()`.
+     Extended to be IPv6-capable along the way. [#1209]
+
  - `nutdrv_qx` driver updates:
    * Define an internal `QX_FLAG_MAPPING_HANDLED` to check if the subdriver
      code (mapping table) and the data found from device walk sit together
